# AdventOfCode

./: .gitignore  Cargo.toml  README.md  cabal.project  flake.nix  haskell.nix
2015/Haskell/: .nix-shell-inputs  AdventOfCode2015.cabal  aoc2015.cabal  default.nix  package.yaml  shell.nix  stack.yaml
2015/Haskell/app/: Main.hs
2015/Haskell/src/: AOC.hs  Common.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day20.hs  Day23.hs  Day24.hs
2015/Rust/: Cargo.toml
2015/Rust/benches/: aoc_2015.rs  day20.rs  day23.rs
2015/Rust/src/: day01.rs  day02.rs  day20.rs  day23.rs  lib.rs  main.rs
2019/Haskell/: aoc2019.cabal  default.nix  package.yaml  shell.nix  stack.yaml
2019/Haskell/app/: Main.hs
2019/Haskell/src/: Common.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Intcode.hs
2019/Task 11/: task.cpp
2019/cpp/Task 1/: task_1.py
2019/cpp/Task 14/: task.py
2019/cpp/Task 6/: task_2.py
2019/various/Task 2/: task_2.cpp
2019/various/Task 3/: task.py
2019/various/Task 4/: input  task.py
2019/various/Task 7/: task_1.cpp  task_2.cpp
2019/various/Task 8/: task_1.py  task_2.py
2020/Haskell/: AdventOfCode2020.cabal  ChangeLog.md  README.md  aoc2020.cabal  default.nix  package.yaml  shell.nix  stack.yaml
2020/Haskell/app/: Main.hs
2020/Haskell/src/: Common.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  (+8 more)
2020/Inputs/: day_15.txt
2020/Rust/: Cargo.toml
2020/Rust/src/: day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day10.rs  day11.rs  day13.rs  day15.rs  day16.rs
2020/cpp/: .clang-format  CMakeLists.txt  common.h  computer.cpp  computer.h  day_01.cpp  day_01.h  day_02.cpp  day_02.h  day_03.cpp  day_03.h  day_04.cpp  day_04.h  day_05.cpp  day_05.h  day_06.cpp  day_06.h  day_07.cpp  day_07.h  day_08.cpp  day_08.h  day_09.cpp  day_09.h  day_10.cpp  day_10.h  day_11.cpp  day_11.h  day_12.cpp  day_12.h  day_13.cpp  day_13.h  day_14.cpp  day_14.h  day_15.cpp  day_15.h  day_16.cpp  day_16.h  day_17.cpp  day_17.h  day_eight.h  (+13 more)
2020/cpp/.cache/clangd/index/: common.h.A8864002D0EC90C1.idx  day_one.cpp.0A1F4404428615C6.idx  day_one.h.AD301C70479EDE26.idx  day_two.h.C583268C8BD2093E.idx  input.cpp.C69178246F38DD76.idx  input.h.9B9D7C86834917EE.idx  main.cpp.486A104A59754253.idx
2020/rust/: Cargo.toml
2020/rust/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  lib.rs  main.rs
2021/: readme.md
2021/Haskell/: AdventOfCode2021.cabal  aoc2021.cabal  default.nix  package.yaml  shell.nix  stack.yaml
2021/Haskell/app/: Main.hs
2021/Haskell/src/: AOC.hs  Common.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs
2021/Rust/: Cargo.toml
2021/Rust/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  main.rs
2021/Rust/src/day08/: permutations.rs
2022/Haskell/: aoc.cabal  aoc2022.cabal  flake.nix
2022/Haskell/aoc/: AoC.hs
2022/Haskell/app/: Main.hs
2022/Haskell/src/: Common.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs
2022/Rust/: Cargo.toml  flake.nix
2022/Rust/benches/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs
2022/Rust/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.py  day21.rs  lib.rs  main.rs
2023/Haskell/: aoc2023.cabal
2023/Haskell/app/: Main.hs
2023/Haskell/src/: Common.hs  Day01.hs  Day02.hs  Day04.hs  Day05.hs  Day06.hs
2023/Haskell/src/Common/: Range.hs
2023/Nix/: Justfile  default.nix
2023/Rust/: Cargo.toml
2023/Rust/benches/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day23.rs
2023/Rust/src/: common.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day23.rs  lib.rs  main.rs
2024/Haskell/: aoc2024.cabal
2024/Haskell/app/: Main.hs
2024/Haskell/src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day07.hs  Day09.hs  Day11.hs
2024/Rust/: Cargo.toml
2024/Rust/benches/: aoc_2024.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs
2024/Rust/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day21.rs  day23.rs  day24.rs  day25.rs  lib.rs  main.rs  template.rs
2025/Haskell/: aoc2025.cabal
2025/Haskell/app/: Main.hs
2025/Haskell/src/: Day01.hs  Day02.hs  Template.hs
2025/Rust/: Cargo.toml  graph.dot
2025/Rust/benches/: aoc_2025.rs
2025/Rust/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  lib.rs  main.rs
Intcode/: cpu.h
Task 1/: input  task_2.py
Task 2/: cpu.cpp  task_1.cpp  task_2.cpp
Task 5/: cpu.cpp  cpu.h  task.cpp  task_1.cpp  task_2.cpp
Task 6/: task.cpp  task_1.py
Task 9/: task_1.cpp
aoc-common-hs/: aoc-common.cabal
aoc-common-rs/: Cargo.toml
aoc-common-rs/src/: byte_split.rs  lib.rs  vec2d.rs
aoc-haskell/: aoc-haskell.cabal
aoc-haskell/src/: AoC.hs
common/: cpu.cpp  cpu.h
emergence/: Cargo.toml
emergence/src/: lib.rs
haskell-nix/: default.nix
(+11 files in other folders)
