cabal-version:   3.0
name:            aoc-haskell
version:         0.1.0.0
license:         MPL-2.0
author:          Jamie Quigley
maintainer:      jamie@quigley.xyz
category:        Other
build-type:      Simple

library
    exposed-modules:  AoC
    build-depends:    base
                    , text
                    , directory
                    , req
                    , split
                    , filepath
                    , transformers
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall -Wno-name-shadowing
    default-extensions:   RecordWildCards
                        , LambdaCase
                        , OverloadedStrings
                        , BlockArguments
