[package]
name = "aoc-2015"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.21", features = ["derive", "env"] }
color-eyre = "0.6.3"
criterion = "0.5.1"
emergence = "2.0.0"


[[bench]]
name = "day20"
harness = false

[[bench]]
name = "day23"
harness = false


[profile.release]
debug = true

