[package]
name = "aoc-2015"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emergence = { path = "../../emergence" }
common = { path = "../../aoc-common-rs" }
clap = { version = "4.5.21", features = ["derive", "env"] }
color-eyre = "0.6.3"
criterion = "0.5.1"
bstr = "1.12.1"
atoi = "2.0.0"
itertools = "0.14.0"

[[bench]]
name = "aoc_2015"
harness = false
