cabal-version:   3.0
name:            aoc2019
version:         0.1.0.0
license:         MPL-2.0
author:          Jamie Quigley
maintainer:      jamie@quigley.xyz

common flags
    default-extensions:
        RecordWildCards
        LambdaCase
        BlockArguments
        FlexibleContexts
    default-language: GHC2024

library
    import: flags
    hs-source-dirs: src
    build-depends: 
        , base
        , aoc-haskell
        , text
        , safe
        , split
        , megaparsec
        , lens
        , containers
        , mtl
        , vector
        , primitive
    exposed-modules:
        Day01
        Day02
        Day03
        Day04
        Day05
    other-modules:
        Common
        Intcode

executable aoc2019
    import: flags
    main-is: Main.hs
    build-depends: 
        aoc2019
        , base
        , aoc-haskell
        , text
    hs-source-dirs:   app