cabal-version: 3.0
name:          aoc2019
version:       0.1.0.0
license:       MPL-2.0
maintainer:    jamie@quigley.xyz
author:        Jamie Quigley

library
    exposed-modules:
        Day01
        Day02
        Day03
        Day04
        Day05

    hs-source-dirs:     src
    other-modules:
        Common
        Intcode

    default-language:   GHC2024
    default-extensions:
        RecordWildCards LambdaCase BlockArguments FlexibleContexts

    build-depends:
        base,
        aoc-haskell,
        text,
        safe,
        split,
        megaparsec,
        lens,
        containers,
        mtl,
        vector,
        primitive

executable aoc2019
    main-is:            Main.hs
    hs-source-dirs:     app
    default-language:   GHC2024
    default-extensions:
        RecordWildCards LambdaCase BlockArguments FlexibleContexts

    build-depends:
        aoc2019,
        base,
        aoc-haskell,
        text
