[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Jamie Quigley <jamie@quigley.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emergence = "2.0.0"
eyre = "0.6.8"
nohash-hasher = "0.2.0"
nom = "7.1.1"
regex = "1.7.0"
