[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Jamie Quigley <jamie@quigley.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emergence = "0.3.0"
eyre = "0.6.5"
itertools = "0.10.1"
nohash-hasher = "0.2.0"
nom = "7.0.0-alpha2"
regex = "1.5.4"

[profile.release]
debug = true
