[package]
name = "aoc-2021-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emergence = { path = "../../emergence" }
eyre = "0.6.8"
multimap = "0.8.3"
ndarray = { version = "0.15.6", features = ["rayon"] }
nohash-hasher = "0.2.0"
