cabal-version:   3.0
name:            aoc2022
version:         0.1.0.0
license:         MPL-2.0
author:          Jamie Quigley
maintainer:      jamie@quigley.xyz

common warnings
    ghc-options: -Wall -Wno-name-shadowing

common extensions
    default-extensions:
        RecordWildCards

library src
    import: warnings
    import: extensions
    hs-source-dirs: src
    build-depends: 
        , base
        , aoc-haskell
        , text
        , safe
        , split
        , megaparsec
        , lens
        , containers
    exposed-modules:
        Day01
        Day02
        Day03
        Day04
        Day05
        Day06
        Day07
    other-modules:
        Common
    default-language: Haskell2010

executable aoc-2022
    import: warnings
    import: extensions
    main-is: Main.hs
    build-depends: 
        , base
        , aoc-haskell
        , src
        , safe
    hs-source-dirs:   app
    default-language: Haskell2010
