cabal-version:   3.0
name:            aoc2022
version:         0.1.0.0
license:         MPL-2.0
author:          Jamie Quigley
maintainer:      jamie@quigley.xyz

common flags
    default-extensions:
        RecordWildCards
    default-language: GHC2024

library src
    import: flags
    hs-source-dirs: src
    build-depends: 
        , base
        , aoc-haskell
        , text
        , safe
        , split
        , megaparsec
        , lens
        , containers
    exposed-modules:
        Day01
        Day02
        Day03
        Day04
        Day05
        Day06
        Day07
    other-modules:
        Common

executable aoc-2022
    import: flags
    main-is: Main.hs
    build-depends: 
        , base
        , aoc-haskell
        , src
        , safe
    hs-source-dirs:   app
