[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
debug = true

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
emergence = "1.0.3"
id_tree = "1.8.0"
indoc = "1.0.7"
itertools = "0.10.5"
memchr = "2.5.0"
tap = "1.0.1"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "day01"
harness = false

[[bench]]
name = "day02"
harness = false

[[bench]]
name = "day03"
harness = false

[[bench]]
name = "day04"
harness = false

[[bench]]
name = "day05"
harness = false

[[bench]]
name = "day06"
harness = false

[[bench]]
name = "day07"
harness = false

[[bench]]
name = "day08"
harness = false
