cabal-version:   3.0
name:            aoc2023
version:         0.1.0.0
license:         MPL-2.0
author:          Jamie Quigley
maintainer:      jamie@quigley.xyz

common flags
    ghc-options: -Wall -Wno-name-shadowing
    default-extensions:
        RecordWildCards
        BlockArguments

library src
    import: flags
    hs-source-dirs: src
    build-depends: 
        , base
        , aoc-haskell
        , text
        , safe
        , megaparsec
    exposed-modules:
        Day01
        Day02
    other-modules:
        Common
    default-language: Haskell2010

executable aoc-2023
    import: flags
    main-is: Main.hs
    build-depends: 
        , base
        , aoc-haskell
        , src
        , safe
    hs-source-dirs:   app
    default-language: Haskell2010
