cabal-version:   3.0
name:            aoc2023
version:         0.1.0.0
license:         MPL-2.0
author:          Jamie Quigley
maintainer:      jamie@quigley.xyz

common flags
    default-extensions:
        RecordWildCards
        BlockArguments
    default-language: GHC2024

library src
    import: flags
    hs-source-dirs: src
    build-depends: 
        , base
        , aoc-haskell
        , text
        , safe
        , megaparsec
        , containers
        , split
        , vector
    exposed-modules:
        Day01
        Day02
        Day04
        Day05
        Day06
    other-modules:
        Common
        Common.Range

executable aoc-2023
    import: flags
    main-is: Main.hs
    build-depends: 
        , base
        , aoc-haskell
        , src
        , safe
    hs-source-dirs:   app
