[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../aoc-common-rs" }
bstr = "1.8.0"
clap = { version = "4.4.10", features = ["derive"] }
collect_slice = "1.2.0"
color-eyre = "0.6.2"
criterion = "0.5.1"
emergence = { path = "../../emergence" }
fxhash = "0.2.1"
memchr = "2.6.4"
ndarray = "0.16.0"
nom = "7.1.3"
nom-supreme = "0.8.0"
num = "0.4.1"
once_cell = "1.18.0"
rayon = "1.8.0"
regex = "1.10.2"
smallvec = "2.0.0-alpha.1"
tap = "1.0.1"
itertools = "0.10.5"
linked-hash-map = "0.5.6"
bitvec = "1.0.1"
pathfinding = "4.6.0"

[[bench]]
name = "day01"
harness = false

[[bench]]
name = "day02"
harness = false

[[bench]]
name = "day03"
harness = false

[[bench]]
name = "day04"
harness = false

[[bench]]
name = "day05"
harness = false

[[bench]]
name = "day06"
harness = false

[[bench]]
name = "day07"
harness = false

[[bench]]
name = "day08"
harness = false

[[bench]]
name = "day09"
harness = false

[[bench]]
name = "day10"
harness = false

[[bench]]
name = "day11"
harness = false

[[bench]]
name = "day12"
harness = false

[[bench]]
name = "day13"
harness = false

[[bench]]
name = "day14"
harness = false

[[bench]]
name = "day15"
harness = false

[[bench]]
name = "day16"
harness = false

[[bench]]
name = "day17"
harness = false

[[bench]]
name = "day18"
harness = false

[[bench]]
name = "day19"
harness = false

[[bench]]
name = "day20"
harness = false

# [[bench]]
# name = "day23"
# harness = false
