cabal-version:   3.0
name:            aoc2024
version:         0.1.0.0
license:         MPL-2.0
author:          Jamie Quigley
maintainer:      jamie@quigley.xyz

common flags
    default-extensions:
        RecordWildCards
        LambdaCase
        BlockArguments
        FlexibleContexts
    default-language: GHC2024

library
    import: flags
    hs-source-dirs: src
    build-depends: 
        , base
        , aoc-haskell
        , aoc-common
        , text
        , safe
        , split
        , megaparsec
        , lens
        , containers
        , mtl
        , vector
        , primitive
        , scientific
        , bytestring
        , aeson
        , hashable
        , unordered-containers
        , array
        , extra 
        , crypton
        , memory
        , arithmoi
    exposed-modules:
        Day01

executable aoc2024
    import: flags
    main-is: Main.hs
    build-depends: 
        aoc2024
        , base
        , aoc-haskell
        , text
        , safe
    hs-source-dirs:   app
