[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emergence = { path = "../../emergence" }
common = { path = "../../aoc-common-rs" }
clap = { version = "4.5.21", features = ["derive", "env"] }
color-eyre = "0.6.3"
criterion = "0.5.1"
atoi = "2.0.0"
memchr = "2.7.4"
tap = "1.0.1"
ndarray = "0.16.1"
fxhash = "0.2.1"
smallvec = "2.0.0-alpha.7"
rayon = "1.10.0"
itertools = "0.13.0"

[[bench]]
name = "day01"
harness = false

[[bench]]
name = "day02"
harness = false

[[bench]]
name = "day03"
harness = false

[[bench]]
name = "day04"
harness = false

[[bench]]
name = "day05"
harness = false

[[bench]]
name = "day06"
harness = false

[[bench]]
name = "day07"
harness = false

[[bench]]
name = "day08"
harness = false

[[bench]]
name = "day09"
harness = false

[[bench]]
name = "day10"
harness = false

[[bench]]
name = "day11"
harness = false
